--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,12 +1,29 @@
-/*.top-site-outer:is(.active, :focus, :hover) {
-    height: 120px;
-    background: #0d0d0d !important;
+@-moz-document url-prefix(about:home), url-prefix(about:newtab) {
+    .click-target-container *, .top-sites-list * {
+        color: #fff !important ;
+        text-shadow: 2px 2px 2px #000 !important;
+    }
+    body {
+        background: url("a.jpg") !important;
+        background-size: cover !important;
+    } 
 }
 
 .tile {
     margin-bottom: 10px !important;
+    background-color: rgba(255, 255, 255, 0.04) !important;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 1) !important;
 }
-*/
+
+.top-site-outer, .top-site-icon {
+    background-color: transparent !important;
+}
+
+.tile:is(.active, :focus, :hover) {
+    transform: scale(1.3);
+    transition: transform 0.2s linear;
+}
+
 .search-inner-wrapper {
     display: none !important;
 }
@@ -15,3 +32,8 @@
     border-top-left-radius: 8px;
     margin-top: 2px;
 }
+/*
+.top-site-outer {
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0) !important;
+}*/
+
