--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,12 +1,27 @@
 @-moz-document url-prefix(about:home), url-prefix(about:newtab) {
     .click-target-container *, .top-sites-list * {
         color: #fff !important ;
-        text-shadow: 2px 2px 2px #000 !important;
     }
     body {
         background: url("a.jpg") !important;
         background-size: cover !important;
     } 
+    .top-site-inner {
+        text-shadow:
+        0.05em 0 black,
+        0 0.05em black,
+        -0.05em 0 black,
+        0 -0.05em black,
+        -0.05em -0.05em black,
+        -0.05em 0.05em black,
+        0.05em -0.05em black,
+        0.05em 0.05em black;
+    }
+}
+
+.tile:is(.active, :focus, :hover) {
+    transform: scale(1.3);
+    transition: transform 0.2s linear;
 }
 
 .tile {
@@ -17,11 +32,6 @@
 
 .top-site-outer, .top-site-icon {
     background-color: transparent !important;
-}
-
-.tile:is(.active, :focus, :hover) {
-    transform: scale(1.3);
-    transition: transform 0.2s linear;
 }
 
 .search-inner-wrapper {
