--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,12 +1,15 @@
 @-moz-document url-prefix(about:home), url-prefix(about:newtab) {
     .click-target-container *, .top-sites-list * {
         color: #fff !important ;
-    }
+    }/*
     body {
-        background: url("a.jpg") !important;
+        background: url("backgroundImg.jpg") !important;
         background-size: cover !important;
-    } 
-    .top-site-inner {
+        background-repeat: no-repeat !important;
+        background-position: center !important;
+        background-attachment: fixed !important;
+    }*/
+    .top-site-inner, .section-title {
         text-shadow:
         0.05em 0 black,
         0 0.05em black,
@@ -19,31 +22,29 @@
     }
 }
 
-.tile:is(.active, :focus, :hover) {
-    transform: scale(1.3);
-    transition: transform 0.2s linear;
+.search-inner-wrapper {
+    display: none !important;
 }
 
 .tile {
     margin-bottom: 10px !important;
-    background-color: rgba(255, 255, 255, 0.04) !important;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 1) !important;
+    border: 1px solid #15F4EE;
+    background-color: rgba(0, 0, 0, 0.4) !important;
+    transition: 0.2s;
+    /*backdrop-filter: blur(4px);
+    box-shadow: 0 2px 6px #15F4EE !important;*/
+}
+
+.tile:is(.active, :focus, :hover) {
+    transform: scale(1.3);
+    transition: transform 0.2s linear;
 }
 
 .top-site-outer, .top-site-icon {
     background-color: transparent !important;
 }
 
-.search-inner-wrapper {
-    display: none !important;
-}
-
 .customize-menu {
     border-top-left-radius: 8px;
-    margin-top: 2px;
+    margin-top: 0px;
 }
-/*
-.top-site-outer {
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0) !important;
-}*/
-
