--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -35,11 +35,16 @@
     box-shadow: 0 2px 6px #15F4EE !important;*/
 }
 
-.tile:is(.active, :focus, :hover) {
+.tile:is(:focus, :hover) {
     transform: scale(1.3);
     transition: transform 0.2s linear;
 }
-
+/*
+.tile:active {
+    transform: scale(1);
+    transition: transform 0.2s linear;
+}
+*/
 .top-site-outer, .top-site-icon {
     background-color: transparent !important;
 }
