--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -27,6 +27,7 @@
 }
 /* scroll down - stories and activities
 .search-wrapper {
+    background-color: transparent !important;
     padding-bottom: 90px !important;
     border-bottom: none !important;
     z-index: 0 !important;
